Fixed some resizing and font-sizes
still very temporary, but now the site on oms.netlify.com won't look as bad

--- a/src/pages/indexPage.module.scss
+++ b/src/pages/indexPage.module.scss
@@ -2,7 +2,6 @@
 @import '../layouts/variables';
 
 .homePage {
-  width: 100%;
   margin: 0;
   padding: 0;
   background-color: $darkBlue;
@@ -58,14 +57,19 @@
   .featuredCase {
     display: flex;
     flex-flow: column wrap;
-    align-content: center;
-    height: 1500px;
-    width: 1800px;
+    align-items: center;
+    max-width: 1800px;
     margin: auto;
-    padding-top: 100px;
+    padding: 100px 0;
 
     h3 {
+      margin-top: 0;
       font-size: 6.4rem;
+    }
+
+    p {
+      width: 50%;
+      font-size: 2.2rem;
     }
 
     img {
@@ -97,15 +101,35 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    height: 1000px;
-    width: 1800px;
+    align-content: center;
+    padding: 100px 0;
 
-    article {
-      height: 300px;
+    .solution {
+      background-color: lightgrey;
+      height: 600px;
+      width: 800px;
       margin: 20px;
 
       img {
-        height: 100%;
+        height: 50%;
+        width: 100%;
+        object-fit: cover;
+      }
+
+      h4 {
+        background-color: #224466;
+        margin-top: -10px; // Some weird margin/padding between the img and h4
+        margin-bottom: 20px;
+        font-size: 4.4rem;
+        padding-left: 20px;
+        border-bottom: solid green;
+      }
+
+      p {
+        margin: 0;
+        padding: 20px;
+        font-size: 2.2rem;
+        color: $darkBlue;
       }
     }
   }
